# discord-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  python-publish.yml  release.yml  tests.yml
src/discord-bot/: discord-bot.py
src/discord_bot/: __init__.py  discord_bot.py
src/discord_framework/: __init__.py  api.py  discord_framework.py
tests/: test_discordbot.py  test_normalbot.py
