[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Framework for creating Discord bots"
authors = ["Derek 'Vlek' McCammond"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
codespell = "^2.3.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
